fail_crate/tests/unexpected_after_pub_super.stderr
error: Unexpected tokens after `super` in `pub(...)`.
 --> fail_crate/tests/unexpected_after_pub_super.rs:4:7
  |
4 | #[new(pub(super =))]
  |       ^^^^^^^^^^^^
