fail_crate/tests/unexpected_after_pub_super.rs
use inew::New;

#[derive(New)]
#[new(pub(super =))]
struct A;

fn main() {}
